--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Node API Sample",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon ./bin/server.js"
     },
     "repository": {
         "type": "git",
@@ -16,5 +16,13 @@
     "bugs": {
         "url": "https://github.com/edgarjuniorBR/nodeApi/issues"
     },
-    "homepage": "https://github.com/edgarjuniorBR/nodeApi#readme"
+    "homepage": "https://github.com/edgarjuniorBR/nodeApi#readme",
+    "dependencies": {
+        "debug": "^3.0.0",
+        "express": "^4.15.4",
+        "http": "0.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.11.0"
+    }
 }
